# bc-postal-code-geolocation-from-open-sources

./: .env.example  .gitattributes  .gitignore  ATTRIBUTION.md  LIVE_DEMO_OSRM_HOME_HEALTH_SPEC.md  Makefile  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
demo/: index.html
demo/assets/: analytics.js  app.js  planner-worker.js  styles.css  test_analytics.mjs  test_planner_worker.mjs
demo/data/: demo-summary.json  lower-mainland-fsa-clusters.json  service-hubs.json
outputs/: README.md  fha_golden_distances_times.csv
scripts/: audit_greenfield_coordinate_rules.py  build_fha_home_health_demo_assets.py  build_golden_postal_geolocation.py  compare_postal_sources.py  enrich_golden_health_authority.py  generate_demo_assets.py  google_maps_adjudicate_postal_codes.py  import_postal_sources.py  postal_source_utils.py  run_greenfield_workflow.py  test_demo_assets.py  test_postal_reconstruction.py
