[project]
name = "bc-postal-code-geolocation-from-open-sources"
version = "0.1.0"
description = "Reconstruct British Columbia postal-code geolocations from free and open web sources."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["scripts"]
